# product_finder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  compose.yaml  docker-entrypoint.sh  env.example  main.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-staging.yml  lint.yml  terraform-apply.yml  terraform-plan.yml  tests.yml
api/: admin.py  firestore_models.py  models.py  schema.py  test_graphql.py  tests.py  urls.py  views.py
api/graphql/: schema.py  types.py
api/migrations/: 0001_initial.py  0002_product_delete_de_product.py  0003_alter_product_de_product_data.py  0004_alter_product_brand.py  0005_llmprompt_llmqueryresult.py  0006_alter_llmprompt_query_type_and_more.py  0007_update_for_structured_output.py  0008_add_parse_strategy.py  0009_add_image_url_to_product.py
api/services/: de_product_api.py
api/tests/: base.py  fixtures.py  test_de_product_api.py  test_firestore_models.py  test_graphql.py  test_llm_pricing.py  test_llm_service.py  test_models.py
docs/: README.md
docs/deployment/: README.md  gcp-setup.md  troubleshooting.md
docs/development/: architecture.md  llm-integration-implementation-plan.md  prompts.md  structured-output.md
docs/user/: llm-usage.md  (+1 more)
product_finder/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: create-secrets.sh  createsuperuser.sh  seed-llm-prompts.sh  setup-gcp.sh
terraform/: .gitignore  firestore.tf  import-existing-resources.sh  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  tfplan  variables.tf
(+17 files in other folders)
